[project]
name = "pyrlament"
description = "Pyrlament"
version = "0.4.7"
license = "MIT"
authors = [
    {name = "Bohdan Bobrowski", email = "bohdan@bobrowski.com.pl"}
]
dependencies = [
    "numpy",
    "pydantic",
    "pydantic-settings",
    "pillow",
    "drawsvg",
    "cairosvg (>=2.8.2,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "autoflake",
    "isort",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 120
extend-exclude = [
    # TODO: try to keep these lines empty
]

[tool.poetry]
name = "pyrlament"
version = "0.4.7"
description = ""
authors = ["Bohdan Bobrowski <bohdan@bobrowski.com.pl>"]
readme = "README.md"
packages = [
    {"include" = "pyrlament"},
]

[tool.poetry.dependencies]
python = ">=3.11.6,<3.14"
numpy = "^2.3.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
drawsvg = {extras = ["raster"], version = "^2.2.0"}
svglib = "^1.5.1"
pillow = "^11.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
ruff = "^0.12.4"
faker = "^37.4.2"
coverage = "^7.9.2"
types-python-slugify = "^8.0.2.20240310"
python-slugify = "^8.0.4"
no-implicit-optional = "^1.3"
pydevd-pycharm = "^252.23892.194"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"
httpx-oauth = "^0.11.2"
asgi-lifespan = "^2.1.0"
pyclean = "^3.1.0"

[tool.poetry.scripts]
pyrlament_demo = 'pyrlament.scripts:demo'

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/tests/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
fail_under = 80

[tool.coverage.html]
directory = "tests/coverage"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

