[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyrlament"
description = "Pyrlament"
version = "0.5.0"
license = "MIT"
requires-python= ">=3.13.0"
authors = [
    {name = "Bohdan Bobrowski", email = "bohdan@bobrowski.com.pl"}
]
dependencies = [
    "numpy",
    "pydantic",
    "pydantic-settings",
    "pillow",
    "drawsvg",
    "cairosvg",
    "h11",
]

[project.optional-dependencies]
dev = [
    "autoflake",
    "isort",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["pyrlament"]

[tool.setuptools.package-data]
"assets" = [
    "*.svg",
    "*.png",
]

[tool.ruff]
line-length = 120
extend-exclude = [
    # TODO: try to keep these lines empty
]

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/tests/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
fail_under = 70

[tool.coverage.html]
directory = "tests/coverage"

[tool.black]
line-length = 120
